--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git</title>
   </head>
   <body>
-    <h1>Git</h1>
+    <h1>Git Github</h1>
+    <p>Adicionando Git ao VS Code</p>
   </body>
 </html>
